fixing alignment

--- a/app/assets/stylesheets/pins.css.scss
+++ b/app/assets/stylesheets/pins.css.scss
@@ -8,7 +8,7 @@
 
 .box {
   margin: 10px;
-  width: 50%;
+  width: 70%;
   margin-left: auto ;
   margin-right: auto;
 }
